# sol_bot

./: .env  .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  plan.rs  pnl.rs  rpc.rs  swap.rs  wallet.rs  web.rs
static/: index.html
